finish refactoring seq2seq with attention model

--- a/seq2seq_attention2.ipynb
+++ b/seq2seq_attention2.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
        "'2/10/93                      '"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -110,26 +110,6 @@
    "metadata": {},
    "source": [
     "後ろに空白がたくさんある"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "29"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(input_date[2])"
    ]
   },
   {
@@ -149,12 +129,32 @@
     }
    ],
    "source": [
-    "len(input_data[2])"
+    "len(input_date[2])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "29"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(input_data[2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,12 +240,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## original"
+    "## original (to be skipped)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,12 +311,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## after removing comments"
+    "## after removing comments (to be skipped)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -426,23 +426,26 @@
      "output_type": "stream",
      "text": [
       "training ...\n",
-      "Epoch 1: 1484.61\n",
-      "Epoch 2: 53.06\n",
-      "Epoch 3: 20.91\n",
-      "Epoch 4: 4.07\n",
-      "Epoch 5: 14.31\n",
-      "Epoch 6: 2.36\n",
-      "Epoch 7: 1.38\n",
-      "Epoch 8: 0.90\n",
-      "Epoch 9: 0.64\n",
-      "Epoch 10: 0.48\n",
-      "Epoch 11: 0.37\n",
-      "Epoch 12: 0.29\n",
-      "Epoch 13: 0.22\n",
-      "Epoch 14: 0.18\n",
-      "Epoch 15: 0.14\n",
-      "Epoch 16: 0.12\n",
-      "Epoch 17: 0.09\n",
+      "Epoch 1: 1705.75\n",
+      "Epoch 2: 180.68\n",
+      "Epoch 3: 111.68\n",
+      "Epoch 4: 46.15\n",
+      "Epoch 5: 15.39\n",
+      "Epoch 6: 10.55\n",
+      "Epoch 7: 23.48\n",
+      "Epoch 8: 4.67\n",
+      "Epoch 9: 1.61\n",
+      "Epoch 10: 0.97\n",
+      "Epoch 11: 0.68\n",
+      "Epoch 12: 0.49\n",
+      "Epoch 13: 0.38\n",
+      "Epoch 14: 0.29\n",
+      "Epoch 15: 0.23\n",
+      "Epoch 16: 0.19\n",
+      "Epoch 17: 0.15\n",
+      "Epoch 18: 0.13\n",
+      "Epoch 19: 0.10\n",
+      "Epoch 20: 0.08\n",
       "Done\n"
      ]
     }
@@ -577,7 +580,229 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# prediction"
+    "# prediction (refactored)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "input_tensor = torch.tensor(test_x).to(device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hs, encoder_state =encoder(input_tensor)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15000"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(test_x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Decoderにはまず文字列生成開始を表す\"_\"をインプットにするので、\"_\"のtensorをバッチサイズ分作成\n",
+    "start_char_batch = [[char2id[\"_\"]] for _ in range(len(test_x))]\n",
+    "decoder_head_tensor = torch.tensor(start_char_batch, device=device)\n",
+    "decoder_input_tensor = decoder_head_tensor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(output_len - 1):\n",
+    "    output , _ , _ = attn_decoder(decoder_input_tensor, hs, encoder_state)\n",
+    "    #decoder_input_tensor = torch.argmax(output ,dim = 2)\n",
+    "    decoder_input_tensor = torch.cat([decoder_head_tensor,torch.argmax(output ,dim = 2)] , dim = 1) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 予測結果を見る際にIDのままだと可読性が悪いので、もとの文字列に復元するためのID→文字列に変換する辞書を定義\n",
+    "id2char = {}\n",
+    "for k, v in char2id.items():\n",
+    "  id2char[v] = k"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predicted_idx =  decoder_input_tensor.detach().cpu().numpy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>input</th>\n",
+       "      <th>answer</th>\n",
+       "      <th>predict</th>\n",
+       "      <th>judge</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Friday, August 20, 2004</td>\n",
+       "      <td>_2004-08-20</td>\n",
+       "      <td>_2004-08-20</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Sunday, December 27, 1987</td>\n",
+       "      <td>_1987-12-27</td>\n",
+       "      <td>_1987-12-27</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>jul 12, 2006</td>\n",
+       "      <td>_2006-07-12</td>\n",
+       "      <td>_2006-07-12</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>nov 26, 2008</td>\n",
+       "      <td>_2008-11-26</td>\n",
+       "      <td>_2008-11-26</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>may 27, 2014</td>\n",
+       "      <td>_2014-05-27</td>\n",
+       "      <td>_2014-05-27</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                           input       answer      predict  judge\n",
+       "0  Friday, August 20, 2004        _2004-08-20  _2004-08-20      1\n",
+       "1  Sunday, December 27, 1987      _1987-12-27  _1987-12-27      1\n",
+       "2  jul 12, 2006                   _2006-07-12  _2006-07-12      1\n",
+       "3  nov 26, 2008                   _2008-11-26  _2008-11-26      1\n",
+       "4  may 27, 2014                   _2014-05-27  _2014-05-27      1"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "row = []\n",
+    "for i in range(len(test_x)):\n",
+    "    #i = 0\n",
+    "    run_test_x_str = \"\".join([id2char[v] for v in test_x[i]])\n",
+    "    run_pred_x_str = \"\".join([id2char[v] for v in predicted_idx[i,:]])\n",
+    "    run_test_y_str = \"\".join([id2char[v] for v in test_y[i]])\n",
+    "    judge = 1 if run_test_y_str == run_pred_x_str else 0\n",
+    "\n",
+    "\n",
+    "    row.append([run_test_x_str, run_test_y_str, run_pred_x_str, judge])\n",
+    "predict_df = pd.DataFrame(row, columns=[\"input\", \"answer\", \"predict\", \"judge\"])\n",
+    "predict_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15000"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sum(predict_df.judge)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# prediction (original. to be skipped)"
    ]
   },
   {
@@ -645,70 +870,123 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# prediction (refactored)"
+    "# to be removed"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "input_tensor = torch.tensor(test_x).to(device)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "hs, encoder_state =encoder(input_tensor)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>input</th>\n",
+       "      <th>answer</th>\n",
+       "      <th>predict</th>\n",
+       "      <th>judge</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>nov 30, 2007</td>\n",
+       "      <td>2007-11-30</td>\n",
+       "      <td>2007-11-30</td>\n",
+       "      <td>O</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>jun 17, 1982</td>\n",
+       "      <td>1982-06-17</td>\n",
+       "      <td>1982-06-17</td>\n",
+       "      <td>O</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>4/22/01</td>\n",
+       "      <td>2001-04-22</td>\n",
+       "      <td>2001-04-22</td>\n",
+       "      <td>O</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Jun 13, 1986</td>\n",
+       "      <td>1986-06-13</td>\n",
+       "      <td>1986-06-13</td>\n",
+       "      <td>O</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>11/26/00</td>\n",
+       "      <td>2000-11-26</td>\n",
+       "      <td>2000-11-26</td>\n",
+       "      <td>O</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "15000"
+       "                           input      answer     predict judge\n",
+       "0  nov 30, 2007                   2007-11-30  2007-11-30     O\n",
+       "1  jun 17, 1982                   1982-06-17  1982-06-17     O\n",
+       "2  4/22/01                        2001-04-22  2001-04-22     O\n",
+       "3  Jun 13, 1986                   1986-06-13  1986-06-13     O\n",
+       "4  11/26/00                       2000-11-26  2000-11-26     O"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(test_x)"
+    "predict_df = pd.DataFrame(row, columns=[\"input\", \"answer\", \"predict\", \"judge\"])\n",
+    "predict_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Decoderにはまず文字列生成開始を表す\"_\"をインプットにするので、\"_\"のtensorをバッチサイズ分作成\n",
-    "start_char_batch = [[char2id[\"_\"]] for _ in range(len(test_x))]\n",
-    "decoder_input_tensor = torch.tensor(start_char_batch, device=device)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for i in range(output_len - 1):\n",
-    "    output , _ , _ = attn_decoder(decoder_input_tensor, hs, encoder_state)\n",
-    "    decoder_input_tensor = torch.argmax(output ,dim = 2)\n",
-    "    #decoder_input_tensor = torch.cat([decoder_input_tensor,torch.argmax(output ,dim = 2)] , dim = 1) "
+    "row = []\n",
+    "for i in range(len(test_input_batch)):\n",
+    "  batch_input = test_input_batch[i]\n",
+    "  batch_output = test_output_batch[i]\n",
+    "  batch_predict = predicts[i]\n",
+    "  for inp, output, predict in zip(batch_input, batch_output, batch_predict):\n",
+    "    x = [id2char[idx] for idx in inp]\n",
+    "    y = [id2char[idx] for idx in output[1:]]\n",
+    "    p = [id2char[idx.item()] for idx in predict]\n",
+    "\n",
+    "    x_str = \"\".join(x)\n",
+    "    y_str = \"\".join(y)\n",
+    "    p_str = \"\".join(p)\n",
+    "\n",
+    "    judge = \"O\" if y_str == p_str else \"X\"\n",
+    "    row.append([x_str, y_str, p_str, judge])\n",
+    "    "
    ]
   },
   {
@@ -722,7 +1000,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -731,8 +1009,15 @@
     "  results = []\n",
     "  for h in decoder_output:\n",
     "    results.append(torch.argmax(h))\n",
-    "  return torch.tensor(results, device=device).view(BATCH_NUM, 1)\n",
-    "\n",
+    "  return torch.tensor(results, device=device).view(BATCH_NUM, 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# 評価用データ\n",
     "test_input_batch, test_output_batch = train2batch(test_x, test_y)\n",
     "input_tensor = torch.tensor(test_input_batch, device=device)\n",
@@ -753,33 +1038,24 @@
     "      # 予測文字を取得しつつ、そのまま次のdecoderのインプットとなる\n",
     "      decoder_input_tensor = get_max_index(decoder_output.squeeze())\n",
     "      batch_tmp = torch.cat([batch_tmp, decoder_input_tensor], dim=1)\n",
-    "    predicts.append(batch_tmp[:,1:])\n",
-    "\n",
-    "\n",
-    "# 予測結果を見る際にIDのままだと可読性が悪いので、もとの文字列に復元するためのID→文字列に変換する辞書を定義\n",
-    "id2char = {}\n",
-    "for k, v in char2id.items():\n",
-    "  id2char[v] = k\n",
-    "\n",
-    "row = []\n",
-    "for i in range(len(test_input_batch)):\n",
-    "  batch_input = test_input_batch[i]\n",
-    "  batch_output = test_output_batch[i]\n",
-    "  batch_predict = predicts[i]\n",
-    "  for inp, output, predict in zip(batch_input, batch_output, batch_predict):\n",
-    "    x = [id2char[idx] for idx in inp]\n",
-    "    y = [id2char[idx] for idx in output[1:]]\n",
-    "    p = [id2char[idx.item()] for idx in predict]\n",
-    "\n",
-    "    x_str = \"\".join(x)\n",
-    "    y_str = \"\".join(y)\n",
-    "    p_str = \"\".join(p)\n",
-    "\n",
-    "    judge = \"O\" if y_str == p_str else \"X\"\n",
-    "    row.append([x_str, y_str, p_str, judge])\n",
-    "predict_df = pd.DataFrame(row, columns=[\"input\", \"answer\", \"predict\", \"judge\"])\n",
-    "predict_df.head()"
+    "    predicts.append(batch_tmp[:,1:])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
